Project3/testcases/moretest11.out

*** Error line 2.
	int k = k + 3;
                ^
*** syntax error

