Project3/testcases/moretest11.glsl
int f( int k) {
	int k = k + 3;
}

